--- a/src/Pages/PhotoDetailed.module.css
+++ b/src/Pages/PhotoDetailed.module.css
@@ -21,11 +21,11 @@
 }
 
 #toolbar-left {
-  left: 0.5rem;
+  left: 1rem;
 }
 
 #toolbar-right {
-  right: 0.5rem;
+  right: 1rem;
 }
 
 .toolbar > * {
